BUDGET/force-app/main/default/objects/Monthly_Record__c/Monthly_Record__c.object-meta.xml
<CustomObject>
    <label>Monthly Record</label>
    <nameField>
        <label>Monthly Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>