BUDGET/force-app/main/default/objects/Monthly_Record__c/fields/Fixed_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Expenses__c</fullName>
    <label>Fixed Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>