BUDGET/force-app/main/default/objects/Monthly_Record__c/fields/Net_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Net_Cash_Flow__c</fullName>
    <formula>Income__c - ( Fixed_Expenses__c +  Variable_Expenses__c +  One_Time_Expenses__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Cash Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>