BUDGET/force-app/main/default/objects/Monthly_Record__c/fields/One_Time_Expenses__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Expenses__c</fullName>
    <label>One Time Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>