BUDGET/force-app/main/default/objects/Monthly_Record__c/fields/Variable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Variable_Expenses__c</fullName>
    <label>Variable Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>